...
        android:textColor="#ffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/professionPageButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRankings"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textViewWelcomeUser"
...
        android:id="@+id/buttonRankings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#80ed072d"
        android:onClick="onClick"
        android:text="Rankings"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
